--- a/HR/static/ngTemplates/app.HR.form.userProfile.html
+++ b/HR/static/ngTemplates/app.HR.form.userProfile.html
@@ -25,8 +25,8 @@
         </div>
         <div class="form-group">
           <label style="margin-right:20px;">Prefix</label>
-          <label class="radio-inline"><input type="radio" name="prefix{{pk}}" ng-model="data.prefix" ng-value="'Smt'">Miss.</label>
-          <label class="radio-inline"><input type="radio" name="prefix{{pk}}" ng-model="data.prefix" ng-value="'Shri'">Mr.</label>
+          <label class="radio-inline"><input type="radio" name="prefix{{pk}}" ng-model="data.prefix" ng-value="'Miss.'">Miss.</label>
+          <label class="radio-inline"><input type="radio" name="prefix{{pk}}" ng-model="data.prefix" ng-value="'Mr.'">Mr.</label>
           <label class="radio-inline"><input type="radio" name="prefix{{pk}}" ng-model="data.prefix" ng-value="'Dr'">Dr</label>
         </div>
         <div class="form-group">
