--- a/support/static/ngTemplates/app.projects.form.html
+++ b/support/static/ngTemplates/app.projects.form.html
@@ -12,11 +12,20 @@
         <input uib-typeahead="vendor as vendor.name for vendor in vendorSearch($viewValue)" ng-model="form.vendor" type="text" class="form-control" placeholder="Search using name">
       </div>
     </div>
-    <div class="form-group" ng-if="mode=='new' || mode=='edit'">
+    <!-- <div class="form-group" ng-if="mode=='new' || mode=='edit'">
       <label>Customer</label>
       <div class="{{(showCreateCompanyBtn || companyExist) && !showCompanyForm ? 'input-group':''}}">
         <input uib-typeahead="company as company.name for company in companySearch($viewValue)" ng-model="form.service" type="text" class="form-control" placeholder="Search using name">
         <span ng-click="openCreateService()" ng-if="(showCreateCompanyBtn || companyExist) && !showCompanyForm" class="input-group-addon btn btn-primary"><i class="fa fa-{{!companyExist ? 'plus':'pencil'}}"></i> {{ !companyExist?  'New':'Update'}}</span>
+      </div>
+      <p ng-if="showCreateCompanyBtn && !companyExist" class="help-block">No company with this name exist!. Click <span class="badge">new</span> to create.</p>
+    </div> -->
+
+    <div class="form-group" ng-if="mode=='new' || mode=='edit'">
+      <label>Customer</label>
+      <div class="{{(showCreateCompanyBtn || companyExist) && !showCompanyForm ? 'input-group':''}}">
+        <input uib-typeahead="company as company.name for company in companySearch($viewValue)" ng-model="form.service" type="text" class="form-control" placeholder="Search using name">
+        <span ng-click="openCreateService(mode)" ng-if="(showCreateCompanyBtn || companyExist) && !showCompanyForm" class="input-group-addon btn btn-primary"><i class="fa fa-{{!companyExist ? 'plus':'pencil'}}"></i> {{ !companyExist?  'New':'Update'}}</span>
       </div>
       <p ng-if="showCreateCompanyBtn && !companyExist" class="help-block">No company with this name exist!. Click <span class="badge">new</span> to create.</p>
     </div>
@@ -52,8 +61,12 @@
       <input ng-model="form.comm_nr" type="text" class="form-control" placeholder="Comm Nr">
     </div>
     <div class="form-group">
-      <label>Customer Ref</label>
-      <input ng-model="form.customer_ref " type="text" class="form-control" placeholder="Customer Ref">
+      <label>Quote Ref</label>
+      <input ng-model="form.quote_ref " type="text" class="form-control" placeholder="Quote Ref">
+    </div>
+    <div class="form-group">
+      <label>Enquiry Ref</label>
+      <input ng-model="form.enquiry_ref " type="text" class="form-control" placeholder="Enquiry Ref">
     </div>
 
     <div class="btn-group pull-right">
