--- a/support/static/ngTemplates/app.projects.service.create.html
+++ b/support/static/ngTemplates/app.projects.service.create.html
@@ -5,24 +5,24 @@
   <h4>Service Details (Optional)</h4>
   <div class="form-group">
     <label>Company</label>
-    <input type="text " class="form-control" ng-model="form.service">
+    <input type="text " class="form-control" ng-model="form.name">
   </div>
   <div class="form-group">
     <label>Name</label>
     <input type="text " class="form-control" ng-model="form.customerName">
   </div>
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label>Telephone</label>
     <input type="text " class="form-control" ng-model="form.telephone">
-  </div>
+  </div> -->
   <div class="form-group">
     <label>Email</label>
     <input type="text" class="form-control" ng-model="form.email">
   </div>
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label>About</label>
     <textarea class="form-control" rows="8" ng-model="form.about"></textarea>
-  </div>
+  </div> -->
   <div style="cursor:pointer;margin:20px;" ng-click="companyAdvanceOptions = !companyAdvanceOptions">
     <div class="text-primary">
       <i class="fa fa-lg fa-sort-{{companyAdvanceOptions? 'up':'desc'}}" style="margin-right:20px;"></i>  Show advance options
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
       <label>CIN</label>
       <input type="text " class="form-control" ng-model="form.cin">
     </div>
@@ -68,7 +68,7 @@
     <div class="form-group">
       <label>web</label>
       <input type="text " class="form-control" ng-model="form.web">
-    </div>
+    </div> -->
   </div>
   <button type="button" class="btn btn-primary pull-right col-md-3 pull-right" ng-click="createCompany()">Save company details</button>
 </div>
