--- a/support/static/ngTemplates/app.vendor.form.html
+++ b/support/static/ngTemplates/app.vendor.form.html
@@ -12,6 +12,10 @@
     <input ng-model="form.name" type="text" class="form-control" placeholder="Name">
   </div>
   <div class="form-group">
+    <label>Responsible Person</label>
+    <input type="text " class="form-control" ng-model="form.personName" placeholder="Responsible Person">
+  </div>
+  <div class="form-group">
     <label>Mobile</label>
     <input type="text " class="form-control" ng-model="form.mobile" placeholder="Mobile">
   </div>
