--- a/POS/static/ngTemplates/app.reports.default.html
+++ b/POS/static/ngTemplates/app.reports.default.html
@@ -1,26 +1,49 @@
-<!-- <div class="bg-white " style="position:relative;min-height:92vh;">
-  <div class="container-fluid" style="padding:0px;">
-    <breadcrumb></breadcrumb>
-    <div class="container-fluid">
-      <div class="row">
-        <h1>reportssssssss</h1>
-      </div>
-    </div>
-  </div>
-</div> -->
-
 <div class="shaddowed card bg-white " style="position:relative;min-height:92vh;">
   <div class="container-fluid" style="padding:10px;">
     <breadcrumb></breadcrumb>
     <div class="container-fluid">
-      <div class="col-md-4 col-md-offset-4 text-center">
-        <div class="input-group">
-          <input ng-model="form.country" uib-typeahead="user as getName(user) for user in userSearch($viewValue)" type="text" class="form-control" placeholder="Name ...">
-          <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="status.start = true;">Search <i class="fa fa-user"></i></button>
-          </span>
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4 text-center">
+          <div class="input-group">
+            <input ng-model="form.name" uib-typeahead="user as getName(user) for user in userSearch($viewValue)" type="text" class="form-control" placeholder="Search By Name">
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-success" ng-click="userOrders()">Search <i class="fa fa-user"></i></button>
+            </span>
+          </div>
         </div>
       </div>
-  </div>
+      <hr>
+      <div class="row">
+        <div class="col-md-6" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-repeat="order in deliveredData" >
+          <div class="container-fluid well" style="padding-bottom:10px;padding-top:10px;border-radius:20px">
+            <div class="row" style="border-bottom: 1px solid #dedede;font-size:17px;padding:5px">
+              <div class="col-md-5">
+                <span><i class="fa fa-calendar"></i> {{order.updated | date : 'dd-MM-yyyy hh:mm a'}}</span>
+              </div>
+              <div class="col-md-7 text-right">
+                <span><i class="fa fa-user"></i> {{order.orderBy | getName}}</span>
+              </div>
+            </div>
+            <div class="row" style="padding-top:15px;">
+              <div class="col-md-10">
+                <strong>{{order.productName}}</strong>
+              </div>
+              <div class="col-md-2 text-right" style="color:green">
+                <strong><i class="fa fa-gift"></i> {{order.qty}}</strong>
+              </div>
+              <div class="col-md-6">
+                <strong>Paid Amount :</strong> {{order.totalAmount * order.qty}}
+              </div>
+              <div class="col-md-6">
+                <strong>Payment Type :</strong> {{order.modeOfShopping}}
+              </div>
+            </div>
+          </div>
+        </div>
+        <h3 class="text-muted" style="text-align:center;padding-top:150px;" ng-if="deliveredData.length==0&&!noDataMsg">Search And Select The User To See His Delivered Orders</h3>
+
+        <h3 class="text-muted" style="text-align:center;padding-top:150px;" ng-if="noDataMsg">No Orders Delivered By This User Yet</h3>
+      </div>
+    </div>
   </div>
 </div>
